[package]
name = "time-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.15.1"
libc = "0.2.172"
time = "0.3.41"
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
users = "0.11.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
parking_lot = "0.12.3"
lru = "0.14.0"
thiserror = "2.0.12"
bincode = "1.3.3"