[package]
name = "time-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.1.1"
fuser = { version = "0.15.1", features = ["serializable"]}
libc = "0.2.172"
time = "0.3.41"
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
users = "0.11.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
parking_lot = "0.12.3"
lru = "0.14.0"
thiserror = "2.0.12"
bincode = "1.3.3"
crossbeam = { version = "0.8.4" }
dashmap = "5.5.3"
tokio = { version = "1.44.2", features = ["full"] }
moka = { version = "0.12.10", features = ["future", "event-listener"] }
futures = "0.3.31"
tempfile = "3.19.1"